<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="0dp"
        android:paddingVertical="0dp"
        tools:context=".ui.detail.CandleStickChartFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stock_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:paddingHorizontal="10dp"
            android:background="#999999">



            <TextView
                android:id="@+id/stockPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="600.00" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="14dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_drop_up"
                app:layout_constraintBottom_toBottomOf="@id/stockPrice"
                app:layout_constraintStart_toEndOf="@id/stockPrice"
                app:layout_constraintTop_toTopOf="@id/stockPrice" />


            <TextView
                android:id="@+id/priceDiff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="@id/stockPrice"
                app:layout_constraintBottom_toBottomOf="@id/stockPrice"
                app:layout_constraintStart_toEndOf="@id/arrow"
                tools:text="(3.00)" />

            <TextView
                android:id="@+id/date_stock_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="10/31 09:00"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/chart_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockprice_date"
                tools:context="日期:" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/open"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_open"
                    tools:context="開:100" />

                <TextView
                    android:id="@+id/close"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_close"
                    tools:context="收:100" />

                <TextView
                    android:id="@+id/high"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_high"
                    tools:context="高:100" />

                <TextView
                    android:id="@+id/low"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stockprice_low"
                    tools:context="低:100" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/candle_stick_chart"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="Overview"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            >

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="持股市值"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/title2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                />

            <TextView
                android:id="@+id/total_asset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/title1"
                app:layout_constraintTop_toBottomOf="@id/title1"
                app:layout_constraintEnd_toEndOf="@id/title1"
                tools:text="10000" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="持股數"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/title3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/title1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="1"/>

            <TextView
                android:id="@+id/text_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/title2"
                app:layout_constraintStart_toStartOf="@id/title2"
                app:layout_constraintTop_toBottomOf="@id/title2"
                tools:text="1000" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="買入均價"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/title4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/title2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/avgBuyPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/title3"
                app:layout_constraintStart_toStartOf="@id/title3"
                app:layout_constraintTop_toBottomOf="@id/title3"
                tools:text="50" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="賣出均價"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/title3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/avgSellPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/title4"
                app:layout_constraintStart_toStartOf="@id/title4"
                app:layout_constraintTop_toBottomOf="@id/title4"
                tools:text="52" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:paddingHorizontal="10dp"
            android:layout_height="wrap_content"
            android:text="投資紀錄"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/black"
            android:orientation="horizontal">

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="買/賣" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="日期" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="價位" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="股數" />

            <TextView
                style="@style/candle_stick_chart_label"
                android:text="損益" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invest_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
